--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,7 @@ jobs:
           name: Create cloudformation stack
           command: |
             aws cloudformation create-stack --stack-name ansible-ec2 --template-body file://create-instance.template --capabilities "CAPABILITY_IAM" "CAPABILITY_NAMED_IAM"
+            ./retreive-ips.sh
 
 # Invoke jobs via workflows
 workflows:
