--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,10 +11,24 @@ jobs:
           name: Create cloudformation stack
           command: |
             aws cloudformation create-stack --stack-name ansible-ec2 --template-body file://create-instance.template --capabilities "CAPABILITY_IAM" "CAPABILITY_NAMED_IAM"
-            ./retreive-ips.sh
+  configure_infrastructure:
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys: ["ee:94:18:ee:cf:1d:28:fe:01:38:7e:f4:85:a4:0d:ec"]
+      run:
+        name: Install Ansible
+        command: |
+          apk add --update ansible
+      run:
+        name: Run playbook and configure server
+        command: |
+          ansible-playbook -i exo3/inventory.txt exo3/main.yml
 
 # Invoke jobs via workflows
 workflows:
   create_infrastructure-workflow:
     jobs:
-      - create_infrastructure
+      - configure_insfrastructure
+#      - create_infrastructure
