--- a/exo3/roles/setup/tasks/main.yml
+++ b/exo3/roles/setup/tasks/main.yml
@@ -10,6 +10,11 @@
   apt:
     upgrade: true
 
+- name: Write the new ec2 instance host key to known hosts
+  become: false
+  connection: local
+  shell: "ssh-kescan -H {{inventory_hostname}} >> ~/.ssh/known_hosts"
+
 - name: Add node source ppa
   become: true
   shell: |
