--- a/exo3/roles/setup/tasks/main.yml
+++ b/exo3/roles/setup/tasks/main.yml
@@ -10,12 +10,12 @@
   apt:
     upgrade: true
 
-- name: Write the new ec2 instance host key to known hosts
-  become: false
-  connection: local
-  shell: |
-    "cat {{inventory_hostname}}
-     ssh-kescan -H {{inventory_hostname}} >> ~/.ssh/known_hosts"
+#- name: Write the new ec2 instance host key to known hosts
+#  become: false
+#  connection: local
+#  shell: |
+#    "cat {{inventory_hostname}}
+#     ssh-kescan -H {{inventory_hostname}} >> ~/.ssh/known_hosts"
 
 
 - name: Add node source ppa
