--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,37 @@
 version: 2.1
 
 # Define a job to be invoked later in a workflow.
+commands:
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable
+          # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID
+          when: on_fail
+          command: |
+              aws cloudformation delete-stack --stack-name ec2-${CIRCLE_WORKFLOW_ID:0:7}
 jobs:
-   smoke_test:
+  smoke_test:
     docker:
       - image: alpine:latest
     steps:
       - run: apk add --update curl
       - run:
           name: smoke test
-          command: |
-            URL="https://blog.udacity.com"
-            # Test if website works
-            if curl -s --head ${URL}
-            then
-              return 0
-            else
-              return 1
-            fi
-      - run:
-          when: on_fail
-          name: Smoke test fail
-          command: "Error, not working"
+          command: return 1
+      - destroy_environment
 
-#  create_infrastructure:
-#    docker:
-#      - image: amazon/aws-cli
-#    steps:
-#      - checkout
-#      - run:
-#          name: Create cloudformation stack
-#          command: |
-#            aws cloudformation create-stack --stack-name ansible-ec2 --template-body file://create-instance.template --capabilities "CAPABILITY_IAM" "CAPABILITY_NAMED_IAM"
+  create_infrastructure:
+    docker:
+      - image: amazon/aws-cli
+    steps:
+      - checkout
+      - run:
+         name: Create cloudformation stack
+         command: |
+           aws cloudformation create-stack --stack-name ec2-${CIRCLE_WORKFLOW_ID:0:7} --template-body file://create-instance.template --capabilities "CAPABILITY_IAM" "CAPABILITY_NAMED_IAM"
+
 #  configure_infrastructure:
 #    docker:
 #      - image: python:3.7-alpine3.11
@@ -53,6 +53,9 @@ jobs:
 workflows:
   create_infrastructure-workflow:
     jobs:
-      - smoke_test
-#       - configure_infrastructure
-#      - create_infrastructure
+      - create_infrastructure
+      - smoke_test:
+          requires:
+            - create_infrastructure
+     #       - configure_infrastructure
+
